[workspace]
members = [
    "rust/core",
    "rust/crypto",
    "rust/protocol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Signal Messenger LLC"]
license = "AGPL-3.0-only"
rust-version = "1.85"

[workspace.lints.clippy]
cast_possible_truncation = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.dependencies]
# Internal crates
libsignal-core = { path = "rust/core" }
signal-crypto = { path = "rust/crypto" }

# Signal forks
curve25519-dalek-signal = { git = 'https://github.com/signalapp/curve25519-dalek', package = "curve25519-dalek", tag = 'signal-curve25519-4.1.3' }
spqr = { git = "https://github.com/signalapp/SparsePostQuantumRatchet.git", tag = "v1.3.0" }

# External dependencies
aes = "0.8.3"
aes-gcm-siv = "0.11.1"
assert_matches = "1.5"
async-trait = "0.1.79"
bitflags = "2.9"
cbc = "0.1.2"
const-str = "0.6.2"
criterion = "0.5"
ctr = "0.9.2"
curve25519-dalek = "4.1.3"
data-encoding-macro = "0.1.18"
derive-where = "1.2.7"
derive_more = "2.0.0"
displaydoc = "0.2.5"
ed25519-dalek = "2.1.0"
env_logger = "0.11.7"
futures-util = "0.3"
ghash = "0.5.0"
hex = "0.4.3"
hkdf = "0.12"
hmac = "0.12.0"
hpke-rs = "0.4.0"
hpke-rs-crypto = "0.3.0"
indexmap = "2.1.0"
itertools = "0.14.0"
libcrux-ml-kem = { version = "0.0.4", default-features = false }
log = "0.4.21"
pqcrypto-falcon = "0.4"
pqcrypto-traits = "0.3"
prost = "0.14"
prost-build = "0.14"
proptest = "1.7"
rand = "0.9"
rand_chacha = "0.9"
rand_core = "0.9"
rayon = "1.8.0"
serde = "1.0.203"
serde_json = "1.0.45"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0.11"
uuid = "1.5"
x25519-dalek = "2.0.0"
zerocopy = "0.8.24"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
