[package]
name = "libsignal-core"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
curve25519-dalek = { workspace = true, features = ["digest"] }
derive_more = { workspace = true, features = ["from", "into", "try_from"] }
displaydoc = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }

[dev-dependencies]
assert_matches = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true }
